# finalproject_Polyakova_Polina_M-555

./: .gitignore  Makefile  README.md  demo.cast  main.py  pyproject.toml
valutatrade_hub/: decorators.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: models.py  usecases.py  utils.py
